@@ -1,73 +1,0 @@
-/*
-CoreBox is combination of some common desktop apps.
-
-CoreBox is free software; you can redistribute it and/or
-modify it under the terms of the GNU General Public License
-as published by the Free Software Foundation; version 2
-of the License.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program; if not, see {http://www.gnu.org/licenses/}. */
-
-#ifndef PLAYERCONTROLS_H
-#define PLAYERCONTROLS_H
-
-#include <QMediaPlayer>
-#include <QWidget>
-
-QT_BEGIN_NAMESPACE
-class QAbstractButton;
-class QAbstractSlider;
-class QComboBox;
-QT_END_NAMESPACE
-
-class PlayerControls : public QWidget
-{
-    Q_OBJECT
-
-public:
-    PlayerControls(QWidget *parent = 0);
-
-    QMediaPlayer::State state() const;
-    int volume() const;
-    bool isMuted() const;
-    qreal playbackRate() const;
-
-public slots:
-    void setState(QMediaPlayer::State state);
-    void setVolume(int volume);
-    void setMuted(bool muted);
-    void setPlaybackRate(float rate);
-
-signals:
-    void play();
-    void pause();
-    void stop();
-    void next();
-    void changeVolume(int volume);
-    void changeMuting(bool muting);
-    void changeRate(qreal rate);
-
-private slots:
-    void playClicked();
-    void muteClicked();
-    void updateRate();
-    void onVolumeSliderValueChanged();
-
-private:
-    QMediaPlayer::State playerState;
-    bool playerMuted;
-    QAbstractButton *playButton;
-    QAbstractButton *stopButton;
-    QAbstractButton *nextButton;
-    QAbstractButton *muteButton;
-    QAbstractSlider *volumeSlider;
-    QComboBox *rateBox;
-};
-
-#endif // PLAYERCONTROLS_H
